# rustart

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  bacon.toml  book.toml  cliff.toml  maskfile.md  mise.toml  persistence-compose.yml
documentation/: .env  SUMMARY.md  documentation.typ
src/: main.rs
src/infrastructure/http/handlers/: mod.rs  user.rs
