[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["json", "macros"] }
bcrypt = "0.17.1"
chrono = { version = "0.4.41", features = ["serde"] }
cuid = "1.3.3"
jsonwebtoken = "9.3.1"
scalar-doc = "0.1.2"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
scylla = "1.3.1"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
reqwest = "0.12.23"
dotenv = "0.15.0"
