[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { version = "*" }
axum = { version = "*", features = ["json", "macros"] }
bcrypt = { version = "*" }
chrono = { version = "*", features = ["serde"] }
cuid = { version = "*" }
dotenv = { version = "*" }
jsonwebtoken = { version = "*" }
reqwest = { version = "*" }
scalar-doc = { version = "*" }
scylla = { version = "*" }
serde = { version = "*", features = ["derive"] }
sqlx = { version = "*", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["cors", "fs"] }
uuid = { version = "*", features = ["v4", "serde"] }
validator = { version = "*", features = ["derive"] }
